- fix topic image padding - add breadcrumb button spacing

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -774,9 +774,18 @@ header .navbar-nav {
     display: none;
 }
 
+.path-site li.activity>div, 
+.path-course-view li.activity>div,
+.section .label .contentwithoutlink, 
+.section .label .activityinstance {
+    padding-right: 0;
+}
+
+
 .course-content ul.topics {
     background: $lightest;
     border: 1px solid $light;
+    margin-bottom: 20px;
 }
 
 .course-content ul.topics li.section {
@@ -955,6 +964,17 @@ header .navbar-nav {
 
 #page-site-index #page-content { // ids :(
     padding-top: 18px;
+}
+
+
+// Generic
+
+.breadcrumb-button {
+    clear: both;
+    .singlebutton {
+        float: right;
+        margin-bottom: 4px;
+    }
 }
 
 // #RELEASENOTES ///////////////////////////////////////////////////////////
